# libcalib

./: CLAUDE-coding-c.md  CLAUDE-coding-sucker-punch.md  CLAUDE-coding.md  CLAUDE.md  CMakeLists.txt  PROTOCOL.md  fusion.cpp  library.json  magcal.cpp  matrix.cpp  rawdata.cpp
.claude/: CLAUDE.md
include/: libcalib.h  libcalib_ahrs.h  libcalib_common.h  libcalib_fusion.h  libcalib_magcal.h  libcalib_mahony.h  libcalib_nxp.h  libcalib_quality.h  libcalib_sampler.h
include/libcalib/: accel_calibrator.h  ahrs.h  calibrator.h  common.h  coordinator.h  fitter.h  fusion.h  gyro_calibrator.h  lineparser.h  mag_calibrator.h  mahony.h  nxp.h  protocol.h  protocol_bin.h  protocol_text.h  quality.h  sampler.h
src/: accel_calibrator.cpp  calibrator.cpp  coordinator.cpp  fitter.cpp  fusion.cpp  gyro_calibrator.cpp  libcalib.cpp  lineparser.cpp  mag_calibrator.cpp  magcal.cpp  mahony.cpp  matrix.cpp  matrix.h  nxp.cpp  protocol.cpp  protocol_bin.cpp  protocol_text.cpp  quality.cpp  quality.md  rawdata.cpp  sampler.cpp  sphere.cpp  sphere.h  sphere_partition.h
